--- a/kong_config/kong.yaml
+++ b/kong_config/kong.yaml
@@ -1,8 +1,6 @@
 _format_version: "3.0"
-_comment: "Declarative configuration for Kong Gateway with Consumers, JWT, ACLs, and JWT claims forwarded as headers"
-
 consumers:
-  - username: admin-user # Matches 'preferred_username' from Keycloak token
+  - username: admin-user
     custom_id: admin-user-cid
     tags: ["rbac-user", "admin"]
   - username: tier1-user
@@ -14,116 +12,94 @@ consumers:
   - username: tier3-user
     custom_id: tier3-user-cid
     tags: ["rbac-user", "tier3"]
-
 acls:
-  # Assign consumers to ACL groups
-  - consumer: admin-user # Can use username or custom_id
+  - consumer: admin-user
     group: admin
-    tags: ["rbac-acl", "admin-group"]
   - consumer: tier1-user
     group: tier-1
-    tags: ["rbac-acl", "tier1-group"]
   - consumer: tier2-user
     group: tier-2
-    tags: ["rbac-acl", "tier2-group"]
   - consumer: tier3-user
     group: tier-3
-    tags: ["rbac-acl", "tier3-group"]
-
 services:
   - name: example-service
-    url: http://httpbin.org/anything # Test upstream service
+    url: http://mock-service:80/anything
     protocol: http
-    connect_timeout: 5000
-    write_timeout: 5000
-    read_timeout: 5000
-    retries: 3
-    tags: ["example", "httpbin", "backend"]
-    plugins:
-      - name: jwt # This plugin is applied to the service, so it protects all routes under it.
-        tags: ["auth", "jwt-validation", "service-plugin"]
-        config:
-          header_names: ["Authorization"]
-          key_claim_name: "preferred_username" # Kong will use this claim from the JWT to identify the Kong Consumer.
-          claims_to_verify: ["exp", "iss", "aud"]
-
-          jwks_uri: "http://keycloak-server:8080/realms/myapp-realm/protocol/openid-connect/certs"
-          issuer: "http://keycloak-server:8080/realms/myapp-realm"
-          audience: ["myapp-api", "account"]
-          # maximum_ttl: 3600 # Optional: Cache JWKS for 1 hour
-
-          # New: Forward specific JWT claims as headers to the upstream service
-          claims_to_headers:
-            - claim: sub # Standard subject claim
-              header: X-User-ID # Header name for the user's unique ID
-            - claim: realm_access.roles # Keycloak typically puts realm roles here
-              header: X-User-Roles # Header name for user roles (will likely be comma-separated if array)
-            - claim: preferred_username
-              header: X-User-Username # Header name for the username
-
+    tags: ["example", "backend"]
 routes:
-  # Existing general example route (protected by JWT on the service)
-  - name: example-route
-    service: # Explicitly link to service by name
-      name: example-service
-    paths:
-      - /example
-    strip_path: true
-    methods: ["GET", "POST"]
-    tags: ["example", "httpbin-test"]
-
-  # --- RBAC Protected Routes ---
-  # All these routes are implicitly protected by the JWT plugin on 'example-service'.
-  # The ACL plugin adds an additional layer of authorization based on consumer groups.
-
   - name: admin-route
-    service:
-      name: example-service
+    service: example-service
     paths: ["/admin/test"]
-    strip_path: true
-    methods: ["GET", "POST"]
+    strip_path: false
+    methods: ["GET"]
     tags: ["rbac-test", "admin-access"]
     plugins:
-      - name: acl
-        tags: ["auth", "acl-protection", "route-plugin"]
+      - name: oidc
         config:
-          allow: ["admin"] # Only consumers in the 'admin' group can access
-
+          client_id: myapp-api
+          client_secret: "" # Leave empty for public client
+          discovery: http://keycloak:8080/realms/myapp-realm/.well-known/openid-configuration
+          bearer_only: true
+          realm: myapp-realm
+          scope: openid profile email
+          token_endpoint_auth_method: none
+      - name: acl
+        config:
+          allow: ["admin"]
   - name: premium-route
-    service:
-      name: example-service
+    service: example-service
     paths: ["/premium/test"]
-    strip_path: true
-    methods: ["GET", "POST"]
+    strip_path: false
+    methods: ["GET"]
     tags: ["rbac-test", "premium-access"]
     plugins:
-      - name: acl
-        tags: ["auth", "acl-protection", "route-plugin"]
+      - name: oidc
         config:
-          allow: ["admin", "tier-1"] # Consumers in 'admin' OR 'tier-1' group
-
+          client_id: myapp-api
+          client_secret: ""
+          discovery: http://keycloak:8080/realms/myapp-realm/.well-known/openid-configuration
+          bearer_only: true
+          realm: myapp-realm
+          scope: openid profile email
+          token_endpoint_auth_method: none
+      - name: acl
+        config:
+          allow: ["admin", "tier-1"]
   - name: standard-route
-    service:
-      name: example-service
+    service: example-service
     paths: ["/standard/test"]
-    strip_path: true
-    methods: ["GET", "POST"]
+    strip_path: false
+    methods: ["GET"]
     tags: ["rbac-test", "standard-access"]
     plugins:
-      - name: acl
-        tags: ["auth", "acl-protection", "route-plugin"]
+      - name: oidc
         config:
-          allow: ["admin", "tier-1", "tier-2"] # Consumers in 'admin' OR 'tier-1' OR 'tier-2'
-
-  - name: public-route # "public" in the sense that all authenticated tiers can access
-    service:
-      name: example-service
+          client_id: myapp-api
+          client_secret: ""
+          discovery: http://keycloak:8080/realms/myapp-realm/.well-known/openid-configuration
+          bearer_only: true
+          realm: myapp-realm
+          scope: openid profile email
+          token_endpoint_auth_method: none
+      - name: acl
+        config:
+          allow: ["admin", "tier-1", "tier-2"]
+  - name: public-route
+    service: example-service
     paths: ["/public/test"]
-    strip_path: true
-    methods: ["GET", "POST"]
+    strip_path: false
+    methods: ["GET"]
     tags: ["rbac-test", "public-tier-access"]
     plugins:
-      - name: acl
-        tags: ["auth", "acl-protection", "route-plugin"]
+      - name: oidc
         config:
-          allow: ["admin", "tier-1", "tier-2", "tier-3"] # Any authenticated and tiered user
+          client_id: myapp-api
+          client_secret: ""
+          discovery: http://keycloak:8080/realms/myapp-realm/.well-known/openid-configuration
+          bearer_only: true
+          realm: myapp-realm
+          scope: openid profile email
+          token_endpoint_auth_method: none
+      - name: acl
+        config:
+          allow: ["admin", "tier-1", "tier-2", "tier-3"]
