--- a/settings_service/Dockerfile
+++ b/settings_service/Dockerfile
@@ -30,4 +30,4 @@ COPY --from=builder /usr/src/app/package*.json ./
 EXPOSE 3000
 
 # Command to run the application
-CMD ["node", "dist/index.js"]
+CMD ["node", "dist/server.js"]
