--- a/settings_service/package.json
+++ b/settings_service/package.json
@@ -2,10 +2,10 @@
   "name": "settings_service",
   "version": "1.0.0",
   "description": "Settings service for the e-commerce platform",
-  "main": "dist/index.js",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "nodemon --watch src --exec ts-node src/index.ts",
+    "start": "node dist/server.js",
+    "dev": "nodemon --watch src --exec ts-node src/server.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
