--- a/frontend/remos-react/package.json
+++ b/frontend/remos-react/package.json
@@ -12,15 +12,17 @@
     "dependencies": {
         "@headlessui/react": "^1.7.19",
         "apexcharts": "^3.49.1",
-        "next": "14.1.4",
-        "react": "18.2.0",
+        "keycloak-js": "^24.0.4",
+        "lucide-react": "^0.525.0",
+        "next": "^14.1.4",
+        "react": "^18.2.0",
         "react-apexcharts": "^1.4.1",
         "react-circular-progressbar": "^2.1.0",
-        "react-dom": "18.2.0",
+        "react-dom": "^18.2.0",
         "react-jvectormap": "^0.0.16",
         "sass": "^1.72.0",
         "swiper": "^11.1.3",
-        "wowjs": "^1.1.3",
-        "keycloak-js": "^24.0.4"
+        "tailwindcss": "^4.1.11",
+        "wowjs": "^1.1.3"
     }
 }
