--- a/nginx_config/nginx.conf
+++ b/nginx_config/nginx.conf
@@ -144,6 +144,10 @@ http {
             proxy_set_header Authorization $http_authorization;
             proxy_pass_header Authorization;
 
+            proxy_read_timeout 1800s;
+            proxy_connect_timeout 1800s;
+            proxy_send_timeout 1800s;
+
             add_header 'Access-Control-Allow-Origin' '*' always;
             add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
         }
