onboarding works with shopfilter

--- a/nginx_config/nginx.conf
+++ b/nginx_config/nginx.conf
@@ -36,7 +36,7 @@ http {
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' '*';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-User-ID, X-Shop-ID, X-User-Roles, X-Authenticated-User';
                 add_header 'Access-Control-Max-Age' 1728000;
                 add_header 'Content-Length' 0;
                 add_header 'Content-Type' 'text/plain charset=UTF-8';
@@ -65,7 +65,7 @@ http {
                 if err then
                     ngx.status = ngx.HTTP_UNAUTHORIZED
                     ngx.header['Access-Control-Allow-Origin'] = '*'
-                    ngx.header['Access-Control-Allow-Headers'] = 'Content-Type, Authorization'
+                    ngx.header['Access-Control-Allow-Headers'] = 'Content-Type, Authorization, X-User-ID, X-Shop-ID, X-User-Roles, X-Authenticated-User'
                     ngx.header['Content-Type'] = 'application/json'
                     ngx.say('{"error":"Unauthorized"}')
                     ngx.exit(ngx.HTTP_UNAUTHORIZED)
@@ -88,7 +88,7 @@ http {
 
             # Always allow CORS in responses
             add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-User-ID, X-Shop-ID, X-User-Roles, X-Authenticated-User' always;
         }
 
         # ============================
@@ -98,7 +98,7 @@ http {
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' '*';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-User-ID';
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-User-ID, X-Shop-ID';
                 add_header 'Access-Control-Max-Age' 1728000;
                 add_header 'Content-Length' 0;
                 add_header 'Content-Type' 'text/plain charset=UTF-8';
@@ -127,7 +127,7 @@ http {
                 if err then
                     ngx.status = ngx.HTTP_UNAUTHORIZED
                     ngx.header['Access-Control-Allow-Origin'] = '*'
-                    ngx.header['Access-Control-Allow-Headers'] = 'Content-Type, Authorization'
+                    ngx.header['Access-Control-Allow-Headers'] = 'Content-Type, Authorization, X-User-ID, X-Shop-ID'
                     ngx.header['Content-Type'] = 'application/json'
                     ngx.say('{"error":"Unauthorized"}')
                     ngx.exit(ngx.HTTP_UNAUTHORIZED)
@@ -146,6 +146,8 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Authorization $http_authorization;
+            proxy_set_header X-Shop-ID $http_x_shop_id;
+            proxy_set_header X-User-ID $http_x_user_id;
             proxy_pass_header Authorization;
 
             proxy_read_timeout 1800s;
@@ -153,7 +155,7 @@ http {
             proxy_send_timeout 1800s;
 
             add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization ,x-user-id' always;
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-User-ID, X-Shop-ID' always;
         }
 
         # ============================
