onboarding works finally

--- a/nginx_config/nginx.conf
+++ b/nginx_config/nginx.conf
@@ -85,6 +85,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Authorization $http_authorization;
             proxy_pass_header Authorization;
+            proxy_set_header X-Shop-ID $http_x_shop_id;
 
             # Always allow CORS in responses
             add_header 'Access-Control-Allow-Origin' '*' always;
