--- a/nginx_config/nginx.conf
+++ b/nginx_config/nginx.conf
@@ -96,7 +96,7 @@ http {
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' '$http_origin';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-User-ID, X-Shop-ID';
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-User-ID, X-Shop-ID, X-User-Roles, X-Authenticated-User';
                 add_header 'Access-Control-Max-Age' 1728000;
                 add_header 'Content-Length' 0;
                 add_header 'Content-Type' 'text/plain charset=UTF-8';
